--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -19,5 +19,346 @@
   "error-generic": "Error",
   "preview.not-found": "No Preview found. Waiting for input",
   "notification-bar.sale": "SELECTED ITEMS ON SALE! CHECK IT OUT!",
-  "signin": "Sign in"
+  "signin": "Sign in",
+  "shippingEstimate-bd": "{timeAmount, plural, =0 {Today} one {In # business day} other {Up to # business days}}",
+  "shippingEstimate-d": "{timeAmount, plural, =0 {Today} one {In # day} other {Up to # days}}",
+  "shippingEstimate-h": "{timeAmount, plural, =0 {Now} one {In # hour} other {Up to # hours}}",
+  "shippingEstimate-m": "{timeAmount, plural, =0 {Now} one {In # minute} other {Up to # minutes}}",
+  "shippingEstimate-scheduled": "{date}, between {startDate} and {endDate}",
+  "shippingEstimate-scheduled-no-dates": "Scheduled",
+  "shippingEstimatePickup-bd": "{timeAmount, plural, =0 {Ready today} one {Ready in up to # business day} other {Ready in up to # business days}}",
+  "shippingEstimatePickup-d": "{timeAmount, plural, =0 {Ready today} one {Ready in up to # day} other {Ready in up to # days}}",
+  "shippingEstimatePickup-h": "{timeAmount, plural, =0 {Ready for pickup} one {Ready in up to # hour} other {Ready in up to # hours}}",
+  "shippingEstimatePickup-m": "{timeAmount, plural, =0 {Ready for pickup} one {Ready in up to # minute} other {Ready in up to # minutes}}",
+  "address-form.loading": "Please wait...",
+  "address-form.dontKnowPostalCode": "I don't know my postal code",
+  "address-form.optional": "Optional",
+  "address-form.edit": "Edit",
+  "address-form.search": "Search",
+  "address-form.geolocation.example.ARG": "Eg: Av. del Libertador 1473, Buenos Aires",
+  "address-form.geolocation.example.BOL": "Eg: Av Arce, 2556, La Paz",
+  "address-form.geolocation.example.BRA": "Eg: Av Paulista, 1578, São Paulo",
+  "address-form.geolocation.example.CAN": "Eg: 450 Wilbrod St, Ottawa",
+  "address-form.geolocation.example.CHL": "Eg: Los Militares, 6191, Santiago",
+  "address-form.geolocation.example.COL": "Eg: Calle 93 # 14-20, Bogotá",
+  "address-form.geolocation.example.ECU": "Eg: Av Rio Amazonas, N 37-61, Quito",
+  "address-form.geolocation.example.ESP": "Eg: Calle Fernando el Santo, 6, Madrid",
+  "address-form.geolocation.example.GTM": "Eg: 6A Calle 6, Guatemala",
+  "address-form.geolocation.example.MEX": "Eg: Calle de Tacuba 8, Ciudad de México",
+  "address-form.geolocation.example.PER": "Eg: Av. José Pardo, 850, Miraflores, Lima",
+  "address-form.geolocation.example.PRT": "Eg: Av. da França 20, Porto",
+  "address-form.geolocation.example.PRY": "Eg: Avenida Eusebio Ayala, 100, Assunção",
+  "address-form.geolocation.example.UNI": "Eg: 225 East 41st Street, New York",
+  "address-form.geolocation.example.URY": "Eg: Bulevar Artigas, 1394, Montevidéu",
+  "address-form.geolocation.example.USA": "Eg: 225 East 41st Street, New York",
+  "address-form.geolocation.example.VEN": "Eg: Avenida Mohedano, Caracas",
+  "address-form.geolocation.example.ROU": "Eg: Bulevardul Ion Mihalache, București 011192, Romania",
+  "address-form.geolocation.example.BGR": "Eg: улица Елин Пелин 13, София",
+  "address-form.geolocation.example.DEU": "Eg: Rheinalleee 95, Düsseldorf",
+  "address-form.geolocation.example.FRA": "Eg: 7 Rue Hautefeuille, Paris",
+  "address-form.geolocation.example.GBR": "Eg: 29 High Street Poole BH15 1AB",
+  "address-form.geolocation.example.ITA": "Eg: Corso Vittorio Emanuele 69, Milano",
+  "address-form.geolocation.example.NLD": "Eg: Surinamestraat 27, Amsterdam",
+  "address-form.geolocation.example.POL": "Eg: Ulica Twarda 3, Szczecin",
+  "address-form.error.ERROR_EMPTY_FIELD": "This field is required.",
+  "address-form.error.ERROR_POSTAL_CODE": "Invalid postal code.",
+  "address-form.error.ERROR_GOOGLE_ADDRESS": "Invalid address.",
+  "address-form.error.generic": "Invalid field.",
+  "address-form.field.addressQuery": "Address",
+  "address-form.field.notApplicable": "N/A",
+  "address-form.field.noNumber": "No number",
+  "address-form.field.country": "Country",
+  "address-form.field.postalCode": "Postal Code",
+  "address-form.field.street": "Street",
+  "address-form.field.addressLine1": "Address Line 1",
+  "address-form.field.addressLine2": "Address Line 2",
+  "address-form.field.number": "Number",
+  "address-form.field.exteriorNumber": "Exterior Number",
+  "address-form.field.interiorNumber": "Interior Number",
+  "address-form.field.complement": "Additional info (eg: apt 201)",
+  "address-form.field.floorAndLetter": "Floor and letter",
+  "address-form.field.reference": "Close to",
+  "address-form.field.district": "District",
+  "address-form.field.neighborhood": "Neighborhood",
+  "address-form.field.commercial": "Commercial address",
+  "address-form.field.city": "City",
+  "address-form.field.town": "Town",
+  "address-form.field.locality": "Locality",
+  "address-form.field.state": "State",
+  "address-form.field.region": "Region",
+  "address-form.field.community": "Community",
+  "address-form.field.colony": "Colony",
+  "address-form.field.direction": "Direction",
+  "address-form.field.department": "Departament",
+  "address-form.field.municipality": "Municipality",
+  "address-form.field.delegation": "Delegation",
+  "address-form.field.municipalityDelegation": "Municipality/Delegation",
+  "address-form.field.province": "Province",
+  "address-form.field.receiverName": "Receiver",
+  "address-form.field.county": "County",
+  "country.AFG": "Afghanistan",
+  "country.ALB": "Albania",
+  "country.DZA": "Algeria",
+  "country.ASM": "American Samoa",
+  "country.AND": "Andorra",
+  "country.AGO": "Angola",
+  "country.AIA": "Anguilla",
+  "country.ATA": "Antarctica",
+  "country.ATG": "Antigua and Barbuda",
+  "country.ARG": "Argentina",
+  "country.ARM": "Armenia",
+  "country.ABW": "Aruba",
+  "country.AUS": "Australia",
+  "country.AUT": "Austria",
+  "country.AZE": "Azerbaijan",
+  "country.BHS": "Bahamas",
+  "country.BHR": "Bahrain",
+  "country.BGD": "Bangladesh",
+  "country.BRB": "Barbados",
+  "country.BLR": "Belarus",
+  "country.BEL": "Belgium",
+  "country.BLZ": "Belize",
+  "country.BEN": "Benin",
+  "country.BMU": "Bermuda",
+  "country.BTN": "Bhutan",
+  "country.BOL": "Bolivia",
+  "country.BIH": "Bosnia and Herzegovina",
+  "country.BWA": "Botswana",
+  "country.BVT": "Bouvet Island",
+  "country.BRA": "Brazil",
+  "country.IOT": "British Indian Ocean Territory",
+  "country.BRN": "Brunei Darussalam",
+  "country.BGR": "Bulgaria",
+  "country.BFA": "Burkina Faso",
+  "country.BDI": "Burundi",
+  "country.KHM": "Cambodia",
+  "country.CMR": "Cameroon",
+  "country.CAN": "Canada",
+  "country.CPV": "Cape Verde",
+  "country.CYM": "Cayman Islands",
+  "country.CAF": "Central African Republic",
+  "country.TCD": "Chad",
+  "country.CHL": "Chile",
+  "country.CHN": "China",
+  "country.CXR": "Christmas Island",
+  "country.CCK": "Cocos (Keeling) Islands",
+  "country.COL": "Colombia",
+  "country.COM": "Comoros",
+  "country.COG": "Congo",
+  "country.COD": "Congo, the Democratic Republic of the",
+  "country.COK": "Cook Islands",
+  "country.CRI": "Costa Rica",
+  "country.CIV": "Cote D'Ivoire",
+  "country.HRV": "Croatia",
+  "country.CUB": "Cuba",
+  "country.CYP": "Cyprus",
+  "country.CZE": "Czech Republic",
+  "country.DNK": "Denmark",
+  "country.DJI": "Djibouti",
+  "country.DMA": "Dominica",
+  "country.DOM": "Dominican Republic",
+  "country.ECU": "Ecuador",
+  "country.EGY": "Egypt",
+  "country.SLV": "El Salvador",
+  "country.GNQ": "Equatorial Guinea",
+  "country.ERI": "Eritrea",
+  "country.EST": "Estonia",
+  "country.ETH": "Ethiopia",
+  "country.FLK": "Falkland Islands (Malvinas)",
+  "country.FRO": "Faroe Islands",
+  "country.FJI": "Fiji",
+  "country.FIN": "Finland",
+  "country.FRA": "France",
+  "country.GUF": "French Guiana",
+  "country.PYF": "French Polynesia",
+  "country.ATF": "French Southern Territories",
+  "country.GAB": "Gabon",
+  "country.GMB": "Gambia",
+  "country.GEO": "Georgia",
+  "country.DEU": "Germany",
+  "country.GHA": "Ghana",
+  "country.GIB": "Gibraltar",
+  "country.GRC": "Greece",
+  "country.GRL": "Greenland",
+  "country.GRD": "Grenada",
+  "country.GLP": "Guadeloupe",
+  "country.GUM": "Guam",
+  "country.GTM": "Guatemala",
+  "country.GIN": "Guinea",
+  "country.GNB": "Guinea-Bissau",
+  "country.GUY": "Guyana",
+  "country.HTI": "Haiti",
+  "country.HMD": "Heard Island and Mcdonald Islands",
+  "country.VAT": "Holy See (Vatican City State)",
+  "country.HND": "Honduras",
+  "country.HKG": "Hong Kong",
+  "country.HUN": "Hungary",
+  "country.ISL": "Iceland",
+  "country.IND": "India",
+  "country.IDN": "Indonesia",
+  "country.IRN": "Iran, Islamic Republic of",
+  "country.IRQ": "Iraq",
+  "country.IRL": "Ireland",
+  "country.ISR": "Israel",
+  "country.ITA": "Italy",
+  "country.JAM": "Jamaica",
+  "country.JPN": "Japan",
+  "country.JOR": "Jordan",
+  "country.KAZ": "Kazakhstan",
+  "country.KEN": "Kenya",
+  "country.KIR": "Kiribati",
+  "country.PRK": "North Korea",
+  "country.KOR": "South Korea",
+  "country.KWT": "Kuwait",
+  "country.KGZ": "Kyrgyzstan",
+  "country.LAO": "Lao People's Democratic Republic",
+  "country.LVA": "Latvia",
+  "country.LBN": "Lebanon",
+  "country.LSO": "Lesotho",
+  "country.LBR": "Liberia",
+  "country.LBY": "Libyan Arab Jamahiriya",
+  "country.LIE": "Liechtenstein",
+  "country.LTU": "Lithuania",
+  "country.LUX": "Luxembourg",
+  "country.MAC": "Macao",
+  "country.MKD": "Macedonia, the Former Yugoslav Republic of",
+  "country.MDG": "Madagascar",
+  "country.MWI": "Malawi",
+  "country.MYS": "Malaysia",
+  "country.MDV": "Maldives",
+  "country.MLI": "Mali",
+  "country.MLT": "Malta",
+  "country.MHL": "Marshall Islands",
+  "country.MTQ": "Martinique",
+  "country.MRT": "Mauritania",
+  "country.MUS": "Mauritius",
+  "country.MYT": "Mayotte",
+  "country.MEX": "Mexico",
+  "country.FSM": "Micronesia, Federated States of",
+  "country.MDA": "Moldova, Republic of",
+  "country.MCO": "Monaco",
+  "country.MNG": "Mongolia",
+  "country.MSR": "Montserrat",
+  "country.MAR": "Morocco",
+  "country.MOZ": "Mozambique",
+  "country.MMR": "Myanmar",
+  "country.NAM": "Namibia",
+  "country.NRU": "Nauru",
+  "country.NPL": "Nepal",
+  "country.NLD": "Netherlands",
+  "country.NCL": "New Caledonia",
+  "country.NZL": "New Zealand",
+  "country.NIC": "Nicaragua",
+  "country.NER": "Niger",
+  "country.NGA": "Nigeria",
+  "country.NIU": "Niue",
+  "country.NFK": "Norfolk Island",
+  "country.MNP": "Northern Mariana Islands",
+  "country.NOR": "Norway",
+  "country.OMN": "Oman",
+  "country.PAK": "Pakistan",
+  "country.PLW": "Palau",
+  "country.PSE": "Palestinian Territory, Occupied",
+  "country.PAN": "Panama",
+  "country.PNG": "Papua New Guinea",
+  "country.PRY": "Paraguay",
+  "country.PER": "Peru",
+  "country.PHL": "Philippines",
+  "country.PCN": "Pitcairn",
+  "country.POL": "Poland",
+  "country.PRT": "Portugal",
+  "country.PRI": "Puerto Rico",
+  "country.QAT": "Qatar",
+  "country.REU": "Reunion",
+  "country.ROU": "Romania",
+  "country.RUS": "Russian Federation",
+  "country.RWA": "Rwanda",
+  "country.SHN": "Saint Helena",
+  "country.KNA": "Saint Kitts and Nevis",
+  "country.LCA": "Saint Lucia",
+  "country.SPM": "Saint Pierre and Miquelon",
+  "country.VCT": "Saint Vincent and the Grenadines",
+  "country.WSM": "Samoa",
+  "country.SMR": "San Marino",
+  "country.STP": "Sao Tome and Principe",
+  "country.SAU": "Saudi Arabia",
+  "country.SEN": "Senegal",
+  "country.SYC": "Seychelles",
+  "country.SLE": "Sierra Leone",
+  "country.SGP": "Singapore",
+  "country.SVK": "Slovakia",
+  "country.SVN": "Slovenia",
+  "country.SLB": "Solomon Islands",
+  "country.SOM": "Somalia",
+  "country.ZAF": "South Africa",
+  "country.SGS": "South Georgia and the South Sandwich Islands",
+  "country.ESP": "Spain",
+  "country.LKA": "Sri Lanka",
+  "country.SDN": "Sudan",
+  "country.SUR": "Suriname",
+  "country.SJM": "Svalbard and Jan Mayen",
+  "country.SWZ": "Swaziland",
+  "country.SWE": "Sweden",
+  "country.CHE": "Switzerland",
+  "country.SYR": "Syrian Arab Republic",
+  "country.TWN": "Taiwan",
+  "country.TJK": "Tajikistan",
+  "country.TZA": "Tanzania, United Republic of",
+  "country.THA": "Thailand",
+  "country.TLS": "Timor-Leste",
+  "country.TGO": "Togo",
+  "country.TKL": "Tokelau",
+  "country.TON": "Tonga",
+  "country.TTO": "Trinidad and Tobago",
+  "country.TUN": "Tunisia",
+  "country.TUR": "Turkey",
+  "country.TKM": "Turkmenistan",
+  "country.TCA": "Turks and Caicos Islands",
+  "country.TUV": "Tuvalu",
+  "country.UGA": "Uganda",
+  "country.UKR": "Ukraine",
+  "country.ARE": "United Arab Emirates",
+  "country.GBR": "United Kingdom",
+  "country.USA": "United States of America",
+  "country.UMI": "United States Minor Outlying Islands",
+  "country.URY": "Uruguay",
+  "country.UZB": "Uzbekistan",
+  "country.VUT": "Vanuatu",
+  "country.VEN": "Venezuela",
+  "country.VNM": "Viet Nam",
+  "country.VGB": "Virgin Islands, British",
+  "country.VIR": "Virgin Islands, U.S.",
+  "country.WLF": "Wallis and Futuna",
+  "country.ESH": "Western Sahara",
+  "country.YEM": "Yemen",
+  "country.ZMB": "Zambia",
+  "country.ZWE": "Zimbabwe",
+  "country.ALA": "Åland Islands",
+  "country.BES": "Bonaire, Sint Eustatius and Saba",
+  "country.CUW": "Curaçao",
+  "country.GGY": "Guernsey",
+  "country.IMN": "Isle of Man",
+  "country.JEY": "Jersey",
+  "country.MNE": "Montenegro",
+  "country.BLM": "Saint Barthélemy",
+  "country.MAF": "Saint Martin (French part)",
+  "country.SRB": "Serbia",
+  "country.SXM": "Sint Maarten (Dutch part)",
+  "country.SSD": "South Sudan",
+  "country.XKX": "Kosovo",
+  "shipping-calculator.estimate": "Estimate",
+  "shipping-calculator.delivery": "Delivery",
+  "shipping-calculator.delivery-for": "Options for",
+  "shipping-calculator.edit": "Edit",
+  "shipping-calculator.view-delivery-options": "View delivery options",
+  "shipping-calculator.all-items-unavailable": "{numberOfUnavailableItems, plural, one {The product} other {All the products}} can't be delivered to this address.",
+  "shipping-calculator.unavailable-items": "{numberOfUnavailableItems, plural, one {A product that can't be delivered to this address was highlighted} other {# products that can't be delivered to this address were highlighted}}.",
+  "shipping-calculator.options-for-remaining-products": "{numberOfOptions, plural, one {Option} other {Options}} for remaining {numberOfItems, plural, one {product} other {products}}",
+  "cart.continue-shopping": "Continue shopping",
+  "cart.title": "Cart",
+  "cart.items": "({itemsQuantity, plural, one {# product} other {# products}})",
+  "cart.empty-state.title": "The cart is empty",
+  "cart.empty-state.message": "Add products by navigating through categories or by searching for them.",
+  "cart.empty-state.button": "Choose products",
+  "cart.checkout": "Checkout"
 }
