--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -30,5 +30,16 @@
   "suggestions.history.empty": "No history yet",
   "suggestions.topSearches.title": "Top searches",
   "productDetails.reference": "Reference",
-  "social.share": "Share"
+  "social.share": "Share",
+  "searchControls.totalCount": "{count,plural,=0{ PRODUCTS}one{ PRODUCT}other{ PRODUCTS}}",
+  "searchControls.filters": "Filters",
+  "searchControls.select.scoreDesc": "Relevance",
+  "searchControls.select.priceDesc": "Price: High to Low",
+  "searchControls.select.priceAsc": "Price: Low to High",
+  "searchControls.select.topSaleDesc": "Sales",
+  "searchControls.select.reviewRateDesc": "Reviews",
+  "searchControls.select.nameDesc": "Name, ascending",
+  "searchControls.select.nameAsc": "Name, descending",
+  "searchControls.select.releaseDateDesc": "Release date",
+  "searchControls.select.bestDiscountDesc": "Discount"
 }
