--- a/i18n/messages/pt.json
+++ b/i18n/messages/pt.json
@@ -30,5 +30,16 @@
   "suggestions.history.empty": "Nenhuma pesquisa encontrada",
   "suggestions.topSearches.title": "Termos mais buscados",
   "productDetails.reference": "Codigo",
-  "social.share": "Compartilhe"
+  "social.share": "Compartilhe",
+  "searchControls.totalCount": "{count,plural,=0{ PRODUTOS}one{ PRODUTO}other{ PRODUTOS}}",
+  "searchControls.filters": "Filtros",
+  "searchControls.select.scoreDesc": "Relevância",
+  "searchControls.select.priceDesc": "Preço: Menor ao Maior",
+  "searchControls.select.priceAsc": "Preço: Maior ao Menor",
+  "searchControls.select.topSaleDesc": "Mais vendidos",
+  "searchControls.select.reviewRateDesc": "Reviews",
+  "searchControls.select.nameDesc": "Nome, crescente",
+  "searchControls.select.nameAsc": "Nome, decrescente",
+  "searchControls.select.releaseDateDesc": "Lancamentos",
+  "searchControls.select.bestDiscountDesc": "Desconto"
 }
