--- a/i18n/messages/pt.json
+++ b/i18n/messages/pt.json
@@ -32,7 +32,7 @@
   "productDetails.reference": "Codigo",
   "social.share": "Compartilhe",
   "searchControls.totalCount": "{count,plural,=0{ PRODUTOS}one{ PRODUTO}other{ PRODUTOS}}",
-  "searchControls.filters": "Filtros",
+  "searchControls.filters": "FILTROS ",
   "searchControls.select.scoreDesc": "Relevância",
   "searchControls.select.priceDesc": "Preço: Menor ao Maior",
   "searchControls.select.priceAsc": "Preço: Maior ao Menor",
