--- a/i18n/messages/pt.json
+++ b/i18n/messages/pt.json
@@ -14,7 +14,8 @@
   "facets.brand-selector.title": "Marcas",
   "facets.tree-selector.title": "Departamentos",
   "facets.filters": "Filtros",
-  "search.page-list.more": "Mais",
+  "search.page-list.more": "Mostrar Mais",
+  "search.page-list.more.loading": "Carregando...",
   "product-not-found": "Produto não encontrado",
   "loading": "Carregando...",
   "error-generic": "Erro",
